<resources>
    <string name="app_name">Little Pebbles</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="no_active_consents">No Active Consents</string>
    <string name="no_inactive_consents">No Inactive Consents</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="create_consent">Create Consent</string>
    <string name="create_calender">Create Calender</string>
    <string name="edit_calender">Edit Calender</string>
    <string name="calender_details">Calender Details</string>
    <string name="edit_consent">Edit Consent</string>
    <string name="delivery_reports">Delivery Reports</string>
    <string name="day_care_reports">Day Care Reports</string>
    <string name="set_activity_icon">Set Activity Icon</string>
    <string name="meal_planner">Meal Planner</string>
    <string name="create_meal_planner">Create Meal Planner</string>
    <string name="date">Last Date and Time </string>
    <string name="promotions">Promotions</string>
    <string name="feedback">Feedback</string>
    <string name="calender">Calender</string>
    <string name="staff_attendance">Staff Attendance</string>
    <string name="reviews_and_ratings"><![CDATA[Reviews & Ratings]]></string>
    <string name="curriculum_and_activities"><![CDATA[Curriculum & Activities]]></string>
    <string name="save_attendance">Save Attendance</string>
    <string name="attendance">Attendance</string>
    <string name="send_notification_to_parent">Send notification to parent</string>
    <string name="no_student_found_please_change_class">No student found. Please change class..!</string>
    <string name="marked">Marked</string>
    <string name="students_attendance_confirmation">Are You Sure That All Selected Student Are Present?</string>
    <string name="name">Name</string>
    <string name="in_time">In Time</string>
    <string name="out_time">Out Time</string>
    <string name="not_marked">Not Marked</string>
    <string name="meals">Meal*</string>
    <string name="type">Type*</string>
    <string name="remarks">Remarks</string>
    <string name="select_date">Select Date*</string>
    <string name="title_notifications">Notifications</string>
    <string name="save_and_submit"><![CDATA[Save & Submit]]></string>
    <string name="planners_and_resources"><![CDATA[Planners & Resources]]></string>
    <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="students">Students</string>
    <string name="active_students">Active Students</string>
    <string name="inactive_students">In-Active Students</string>
    <string name="underlined_text"><u>Underlined Text</u></string>
    <string name="office_hours">(Office Hours : <font fgcolor='#FF000000'>Monday - Saturday, </font>10 : 00 AM to 06 : 00 PM.)</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="check_you_internet_connection">Check your connection, then refresh the page.</string>
    <string name="refresh">Refresh</string>

</resources>