<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.AttendanceActivity">

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/back_iv"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="12dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:src="@drawable/back_img" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:text="@string/attendance"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:fontFamily="@font/inter_bold"/>
    </LinearLayout>

    <Button
        android:id="@+id/save_attendance_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/save_attendance"
        android:textAllCaps="true"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/inter"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/save_attendance_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout9">

        <!-- Scroll Content -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/save_attendance_btn"
            android:layout_below="@id/linearLayout9"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout9">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linearLayout12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/textView48"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/attendance_not_marked"
                        android:padding="12dp"
                        android:text="Attendance is not marked for the day"
                        android:textColor="@color/white"
                        android:visibility="gone" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                    <LinearLayout
                        android:id="@+id/date_lo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:background="@drawable/edit_text_bg"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="12dp">

                        <TextView
                            android:id="@+id/date_txt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="6dp"
                            android:hint="Select Date"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black"
                            android:textSize="14dp" />

                        <ImageView
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:src="@drawable/calender_img"
                            app:tint="@color/black" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:gravity="center">

                        <LinearLayout
                            android:id="@+id/classes_lo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_weight="1"
                            android:background="@drawable/edit_text_bg"
                            android:orientation="horizontal">

                            <Spinner
                                android:id="@+id/classes_sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@android:color/transparent"
                                android:padding="12dp" />

                            <ImageView
                                android:id="@+id/img_class"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_alignParentEnd="true"
                                android:layout_centerInParent="true"
                                android:layout_gravity="center"
                                android:layout_marginEnd="15dp"
                                android:gravity="center"
                                android:padding="5dp"
                                android:src="@drawable/down_arrow_img"
                                android:visibility="visible"
                                app:tint="@color/gray1"></ImageView>

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/sections_lo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_weight="1"
                            android:background="@drawable/edit_text_bg"
                            android:orientation="horizontal">

                            <Spinner
                                android:id="@+id/sections_sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@android:color/transparent"
                                android:padding="12dp" />

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_alignParentEnd="true"
                                android:layout_centerInParent="true"
                                android:layout_gravity="center"
                                android:layout_marginEnd="15dp"
                                android:gravity="center"
                                android:padding="5dp"
                                android:src="@drawable/down_arrow_img"
                                android:visibility="visible"
                                app:tint="@color/black">

                            </ImageView>

                        </LinearLayout>

                    </LinearLayout>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:elevation="1dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:id="@+id/pending_lo"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:clickable="true"
                                android:focusable="true"
                                android:foreground="?attr/selectableItemBackground"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:padding="8dp">

                                <TextView
                                    android:id="@+id/pending_txt"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/inter_semibold"
                                    android:gravity="center"
                                    android:text="Total Present "
                                    android:textColor="@color/blue3" />

                                <TextView
                                    android:id="@+id/present_count_txt"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/inter_semibold"
                                    android:gravity="center"
                                    android:text="(0)"
                                    android:textColor="@color/blue3" />
                            </LinearLayout>

                            <View
                                android:id="@+id/divider13"
                                android:layout_width="1dp"
                                android:layout_height="match_parent"
                                android:background="?android:attr/listDivider" />

                            <LinearLayout
                                android:id="@+id/rejected_lo"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:clickable="true"
                                android:focusable="true"
                                android:foreground="?attr/selectableItemBackground"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:padding="8dp">

                                <TextView
                                    android:id="@+id/rejected_txt"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/inter_semibold"
                                    android:gravity="center"
                                    android:text="Total Absent" />

                                <TextView
                                    android:id="@+id/absent_count_txt"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/inter_semibold"
                                    android:gravity="center"
                                    android:text="(0)" />
                            </LinearLayout>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/checkBoxAll"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:text="Select All" />

                        <CheckBox
                            android:id="@+id/parent_notification_cb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/send_notification_to_parent" />

                    </LinearLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_50sdp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/inter_medium"
                        android:text="No Data Found"
                        android:textColor="@color/gray1"
                        android:textSize="@dimen/_12sdp"
                        android:visibility="gone" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/student_attendance_rv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <TextView
                    android:id="@+id/nodataTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_student_found_please_change_class"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

        </ScrollView>

    </LinearLayout>



    <!-- Progress -->
    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/progress"
        style="@style/AVLoadingIndicatorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:indicatorColor="@color/blue"
        app:indicatorName="LineSpinFadeLoaderIndicator"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>

